--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@
 
 html, body {                      /* geldt voor html en body */
   margin: 0px;                    /* standaard marge 0 */
-  background-color: #f4eaea;    /* achtergrondkleur lichtgrijs */
-  color: #303030;               /* tekstkleur donkergrijs */
+  background-color: #170202;    /* achtergrondkleur lichtgrijs */
+  color: #030000;               /* tekstkleur donkergrijs */
+
 }  
 
 div {                             /* geldt voor div */
@@ -31,7 +32,7 @@ div {                             /* geldt voor div */
 /* Indeling voor alle pagina's */
 
 .page {
-  width: 700px;                   /* vaste breedte van 700 pixels */
+ /* width: 700px;                   /* vaste breedte van 700 pixels */
   margin: 10px auto;              /* boven en onder 10 pixels marge, links en rechts marge gelijk verdeeld (gecentreerd) */
 }
 
@@ -49,7 +50,8 @@ h1, h2, h3 {                      /* geldt voor h1 en h2 en h3 */
 
 p {
   margin: 10px 0px;
-  text-align: justify;            /* tekst links en rechts uitvullen */
+  text-align: justify;  
+  color: white;          /* tekst links en rechts uitvullen */
 }
 
 img {
@@ -61,13 +63,17 @@ img {
 /* .item {} */ /* hier doen we nog niks mee, dat mag je zelf toevoegen */
 
 .item-plaatje {
-  float:left;
-  width:250px;
-  padding-right: 15px; /* zorgt dat plaatje niet tegen tekst komt */
+  float: right;
+  width: 250px;
+  padding: 15px; /* zorgt dat plaatje niet tegen tekst komt */
 }
+
 .item-tekst {
-  float:right;
-  width: 450px;
+  width: 100px; 
+  height: 750px;
+  margin-left: 100px;
+  color: black;
+  padding: 15px;
 }
 
 /* Indeling voor sub pagina */
@@ -75,8 +81,10 @@ img {
 /* Opmaak voor alle pagina's */
 
 h1, h2, h3 {
-      color: rgb(121, 32, 28);
-}
+      color: rgb(255, 217, 80);
+      border-color: black;
+      border: 5px; 
+    }
 
 .smalltext {
     text-align: center;
@@ -84,7 +92,7 @@ h1, h2, h3 {
 }
 
 a {
-    color: skyblue;
+    color: rgb(177, 32, 24);
     text-decoration: none;
 }
 
@@ -99,12 +107,19 @@ nav ul {
     list-style-type: none;
     margin: auto;
     padding: 0;
-    background-color: #d4acac;
     overflow: hidden;
+    position: fixed;
+    width: 100%;
+    bottom: 90%;
+    margin-left: 0%;
+    top: 0%;
+
+    
 }
 
 nav ul li {
     float: left;
+
 }
 
 nav li a {
@@ -113,12 +128,89 @@ nav li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: 150%;
+    font-family:'Times New Roman', Times, serif
 }
 
 nav li a:hover {
-    background-color: #aaaaaa;
+    background-color: #090808;
 }
 
 nav li a.active {
-    background-color: rgb(121, 32, 28);
+    background-color: rgb(255, 209, 45);
+}
+
+
+#hfdpagina {
+  background-image: url("afbeeldingen/cinema-cool.jpeg") ;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1420px;
+}
+
+.geschiedenis-plaatje {
+  float: left;
+  width: 250px;
+  padding-right:10px;
+
+}
+
+.home-plaatje {
+  width: 250px;
+  padding-left: 15px;
+  margin-left: 975px;
+}
+
+.bottom-plaatje {
+  height: 175px;
+  width: 750px;
+  padding: 15px;
+}
+
+.geschiedenis-tekst {
+  margin-left: 200px;
+  width: 450px; 
+  color: white;
+  height: 1200px;
+}
+
+#pagina2 {
+  background-image: url("afbeeldingen/godfather.jpeg") ;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
+
+
+
+#pagina3 { 
+  background-image: url("afbeeldingen/red-gradient.jpeg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1200px;
+}
+
+.blurry-background {
+  background-color: rgba(255, 255, 255, 0.42);
+  color: black;
+  border: 1px solid white;
+  border-radius: 7px;
+  padding-right: 8px;
+  padding-left: 8px;
+  white-space: nowrap;
+  backdrop-filter: blur(5px);
+  width: 600px;
+  height: 275px;
+  margin-left: 800px;
+}
+
+#pagina4 {
+  background-image: url("afbeeldingen/interstellar.jpeg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1450px;
 }
