--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ nav ul {
     width: 100%;
     bottom: 90%;
     margin-left: 350px;
+   
 }
 
 nav ul li {
@@ -180,14 +181,12 @@ nav li a.active {
   
 }
 
-
-
 #pagina3 { 
   background-image: url("afbeeldingen/lalaland.jpeg");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 1200px;
+  height: 1450px;
 }
 
 .blurry-background {
@@ -210,4 +209,25 @@ nav li a.active {
   background-repeat: no-repeat;
   background-size: cover;
   height: 1450px;
+}
+
+.textpagina3 {
+  margin-left: 500px;
+  width: 450px; 
+  color: white;
+  height: 1200px;
+}
+
+.actie-plaatje {
+  width: 300px;
+  padding-right:10px;
+  margin-left: 85px;
+  border: 1px solid white;
+}
+
+.soorten-films {
+  margin-left: 500px;
+  width: 600px; 
+  color: white;
+  height: 1200px;
 }
