--- a/style.css
+++ b/style.css
@@ -66,12 +66,13 @@ img {
   float: right;
   width: 250px;
   padding: 15px; /* zorgt dat plaatje niet tegen tekst komt */
+  
 }
 
 .item-tekst {
   width: 100px; 
   height: 750px;
-  margin-left: 100px;
+  margin-left: 950px;
   color: black;
   padding: 15px;
 }
@@ -110,12 +111,13 @@ nav ul {
     overflow: hidden;
     width: 100%;
     bottom: 90%;
-    margin-left: 350px;
+    margin-left: 740px;
    
 }
 
 nav ul li {
     float: left;
+    
 
 }
 
@@ -126,7 +128,7 @@ nav li a {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 125%;
-    font-family:'Times New Roman', Times, serif
+    font-family:'Times New Roman', Times, serif;
 }
 
 nav li a:hover {
@@ -143,21 +145,23 @@ nav li a.active {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 1420px;
+  height: 1500px;
 }
 
 .geschiedenis-plaatje {
   float: left;
-  width: 300px;
+  width: 375px;
   padding-right:10px;
-  margin-left: 300px;
+  margin-left: 690px;
+
 
 }
 
 .home-plaatje {
   width: 250px;
   padding-left: 15px;
-  margin-left: 600px;
+  margin-left: 980px;
+
 }
 
 .bottom-plaatje {
@@ -167,8 +171,8 @@ nav li a.active {
 }
 
 .geschiedenis-tekst {
-  margin-left: 500px;
-  width: 450px; 
+  margin-left: 850px;
+  width: 575px; 
   color: white;
   height: 1200px;
 }
@@ -178,6 +182,7 @@ nav li a.active {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 1700px;
   
 }
 
@@ -192,7 +197,7 @@ nav li a.active {
 .blurry-background {
   background-color: rgba(255, 255, 255, 0.726);
   color: black;
-  border: 1px solid white;
+  border: 2px solid rgb(255, 209, 45);
   border-radius: 7px;
   padding-right: 8px;
   padding-left: 8px;
@@ -200,7 +205,7 @@ nav li a.active {
   backdrop-filter: blur(15px);
   width: 600px;
   height: 275px;
-  margin-left: 450px;
+  margin-left: 800px;
 }
 
 #pagina4 {
@@ -230,4 +235,19 @@ nav li a.active {
   width: 600px; 
   color: white;
   height: 1200px;
+}
+
+.plaatjehome2 {
+  width: 250px;
+  padding-left: 15px;
+  margin-left: 600px;
+  border: 1px solid white;
+}
+
+.home-bottomtekst {
+  margin-left: 10000px;
+  width: 90px; 
+  color: white;
+  height: 100px;
+  
 }
