--- a/style.css
+++ b/style.css
@@ -238,16 +238,28 @@ nav li a.active {
 }
 
 .plaatjehome2 {
-  width: 250px;
-  padding-left: 15px;
+  width: 275px;
   margin-left: 600px;
   border: 1px solid white;
 }
 
 .home-bottomtekst {
-  margin-left: 10000px;
   width: 90px; 
   color: white;
   height: 100px;
-  
+  border: none;
 }
+
+.plaatjehome3 {
+  width: 275px;
+  margin-left: 1000px;
+  border: 1px solid white;
+}
+
+.plaatjehome4 {
+  width: 260px;
+  margin-left: 500px;
+  border: 1px solid white;
+
+}
+
