--- a/style.css
+++ b/style.css
@@ -43,10 +43,16 @@ header, footer {                  /* geldt voor header en footer */
 main {                       
   text-align: justify;            /* tekst uitvullen */}
 
-h1, h2, h3 {                      /* geldt voor h1 en h2 en h3 */
+h1 {                      /* geldt voor h1 en h2 en h3 */
   margin: 10px 0px;
   text-align: center;             /* tekst centreren */
 } 
+
+h2 {
+  margin: 10px 0px;
+  text-align: center;
+  color: rgb(116, 17, 17);
+}
 
 p {
   margin: 10px 0px;
@@ -81,7 +87,7 @@ img {
 
 /* Opmaak voor alle pagina's */
 
-h1, h2, h3 {
+h1 {
       color: rgb(255, 217, 80);
       border-color: black;
       border: 5px; 
@@ -132,7 +138,7 @@ nav li a {
 }
 
 nav li a:hover {
-    background-color: #090808;
+    background-color: rgb(116, 17, 17)
 }
 
 nav li a.active {
@@ -197,7 +203,7 @@ nav li a.active {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 2000px;
+  height: 2200px;
 }
 
 .blurry-background {
@@ -307,4 +313,26 @@ div.gallery img {
   color: white;
   text-align: center;
 }
+
+button {
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #04AA6D;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
 
